MMCPA-83: Fixing issues for throbber on mobile.

--- a/docroot/themes/custom/alshaya_white_label/sass/components/slider/_sell.scss
+++ b/docroot/themes/custom/alshaya_white_label/sass/components/slider/_sell.scss
@@ -27,8 +27,8 @@
         }
 
         @include breakpoint($only-mobile) {
-          top: 0.625rem;
-          #{$left}: 4.375rem;
+          bottom: -2rem;
+          #{$left}: 40%;
         }
       }
     }
